syntax = "proto3";

// only for test
// job runner settings
message TestRunnerSettings {
  string name = 1;
}
